1. 新增 table_interlaced_discoloration 配置项，配置表格隔行变色 2. 修复 toc 文章目录滚动异常（由下向上滚动被挡住的问题） 3. 修复 音乐馆参数配置后高度异常 4. 新增首页双栏显示配置 5. 优化 Waline css 引入方式

--- a/_config.yml
+++ b/_config.yml
@@ -333,14 +333,10 @@ valine:
 # waline - A simple comment system with backend support fork from Valine
 # https://waline.js.org/
 waline:
-  serverURL: https://waline-api-xxxx.vercel.app/ # Waline server address url
+  serverURL: # Waline server address url
+  bg: # waline background
   pageview: false
-  avatar: mp # gravatar style https://zh-tw.gravatar.com/site/implement/images/#default-image
-  emojiCDN: //i0.hdslb.com/bfs/emote/ # emoji CDN
-  bg: /img/comment_bg.png # waline background
-  visitor: false
   option:
-    - placeholder: 今天应该会收到少佐的信叭<br>生活明朗，万物可爱
 
 # Twikoo
 # https://github.com/imaegoo/twikoo
