--- a/_config.yml
+++ b/_config.yml
@@ -226,7 +226,6 @@ post_copyright:
 # Sponsor/reward
 reward:
   enable: true
-  coinAudio: https://npm.elemecdn.com/akilar-candyassets@1.0.36/audio/aowu.m4a
   QR_code:
     - img: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-weichat.png
       link:
@@ -995,6 +994,11 @@ essay:
   enable: false
   top_background:
 
+# ptool 文章底部工具
+ptool:
+  enable: true
+  categories: false
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
@@ -1078,8 +1082,6 @@ CDN:
     # artalk_css:
     # pace_js:
     # pace_default_css:
-    # coin_js:
-    # coin_css:
     # countup_js:
     # gsap_js:
     # busuanzi:
