--- a/_config.yml
+++ b/_config.yml
@@ -997,6 +997,10 @@ essay:
 ptool:
   enable: true
   categories: false
+  
+# 欢迎语配置
+greetingBox:
+  enable: false
 
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
