--- a/_config.yml
+++ b/_config.yml
@@ -1003,6 +1003,12 @@ ptool:
 greetingBox:
   enable: false
 
+# 文章顶部ai摘要
+post_head_ai_description:
+  enable: true
+  key:
+  Referer:
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
