--- a/_config.yml
+++ b/_config.yml
@@ -1008,6 +1008,7 @@ post_head_ai_description:
   enable: true
   gptName: AnZhiYu
   mode: local # 默认模式 可选值: tianli/local
+  switchBtn: true # 可以配置是否显示切换按钮 以切换tianli/local
   btnLink: https://afdian.net/item/2e07e870dad911edacb852540025c377
   randomNum: 3 # 按钮最大的随机次数，也就是一篇文章最大随机出来几种
   basicWordCount: 1000 # 最低获取字符数, 最小1000, 最大1999
