取消默认配置运营模式与责任

--- a/_config.yml
+++ b/_config.yml
@@ -1005,7 +1005,7 @@ essay:
 ptool:
   enable: true
   categories: false # 是否显示分类
-  mode: /wechat/ # 运营模式与责任，不配置不显示
+  mode: # 运营模式与责任，不配置不显示
 
 # 欢迎语配置
 greetingBox:
