更新朋友圈前端版本

--- a/_config.yml
+++ b/_config.yml
@@ -927,7 +927,7 @@ home_top:
 # 朋友圈配置
 friends_vue:
   enable: false
-  vue_js: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.0/js/friends_vue/index.js
+  vue_js: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.8/friends/index.804b9513.js
   apiurl: # 朋友圈后端地址
   top_background:
 
