支持highlightTags配置高亮tag 支持随机颜色的tag

--- a/_config.yml
+++ b/_config.yml
@@ -700,8 +700,11 @@ aside:
   card_tags:
     enable: true
     limit: 40 # if set 0 will show all
-    color: true
+    color: false
     sort_order: # Don't modify the setting unless you know how it works
+    highlightTags:
+      - Hexo
+      - 前端
   card_archives:
     enable: true
     type: monthly # yearly or monthly
