新增文章顶部rotate配置选项，文章顶部图片是否旋转并使用主色调 修复swiper超出的问题

--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,7 @@ post_meta:
     categories: true # true or false 文章页是否显示分类
     tags: true # true or false 文章页是否显示标籤
     label: true # true or false 显示描述性文字
+    rotate: true # true or false 文章顶部图片是否旋转并使用主色调
 
 # wordcount (字数统计)
 # see https://butterfly.js.org/posts/ceeb73f/#字数统计
@@ -1030,12 +1031,12 @@ inject:
 # 非必要请不要修改
 CDN:
   # The CDN provider of internal scripts (主题内部 js 的 cdn 配置)
-  # option: local/jsdelivr/unpkg/cdnjs/custom
+  # option: local/elemecdn/jsdelivr/unpkg/cdnjs/custom
   # Dev version can only choose. ( dev版的主题只能设置为 local )
   internal_provider: elemecdn
 
   # The CDN provider of third party scripts (第三方 js 的 cdn 配置)
-  # option: jsdelivr/unpkg/cdnjs/custom
+  # option: elemecdn/jsdelivr/unpkg/cdnjs/custom
   third_party_provider: elemecdn
 
   # Add version number to CDN, true or false
