全新的文章顶部样式

--- a/_config.yml
+++ b/_config.yml
@@ -221,6 +221,7 @@ post_copyright:
   enable: true
   decode: false
   author_href:
+  location: 长沙
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
 
