--- a/_config.yml
+++ b/_config.yml
@@ -988,7 +988,7 @@ home_top:
     tips: 新品主题
     title: Theme-AnZhiYu
     image: https://img02.anzhiy.cn/adminuploads/1/2023/03/27/64215d46a1ca6.webp
-    link: https://anzhiy.cn/posts/220c.html
+    link: https://anzhiy.cn/docs
 
 # 朋友圈配置
 friends_vue:
