--- a/_config.yml
+++ b/_config.yml
@@ -1161,6 +1161,7 @@ CDN:
     # aplayer_css:
     # aplayer_js:
     # meting_js:
+    # meting_api
     # prismjs_js:
     # prismjs_lineNumber_js:
     # prismjs_autoloader:
