【topGroup】topGroup图片支持懒加载 【lazyload】懒加载支持图片渐进显示

--- a/_config.yml
+++ b/_config.yml
@@ -932,6 +932,7 @@ lazyload:
   field: site # site/post
   placeholder:
   blur: true
+  progressive: true
 
 # PWA
 # See https://github.com/JLHwung/hexo-offline
