--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "bugs": {
     "url": "https://github.com/anzhiyu-c/hexo-theme-anzhiyu/issues",
-    "email": "chen@anzhiy.cn"
+    "email": "chen@anheyu.com"
   },
   "dependencies": {
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-renderer-pug": "^3.0.0"
   },
-  "homepage": "https://anzhiy.cn/",
-  "author": "anzhiyu <chen@anzhiy.cn>",
+  "homepage": "https://blog.anheyu.com/",
+  "author": "anzhiyu <chen@anheyu.com>",
   "license": "Apache-2.0"
 }
