--- a/_config.yml
+++ b/_config.yml
@@ -546,7 +546,7 @@ site_verification:
 
 theme_color:
   enable: true
-  cover_change: false
+  cover_change: false # 整篇文章跟随cover修改主色调
   main: "#3b70fc"
   dark_main: "#0084ff"
   paginator: "#3b70fc"
