--- a/_config.yml
+++ b/_config.yml
@@ -1078,7 +1078,8 @@ post_head_ai_description:
 # 快捷键配置
 shortcutKey:
   enable: false
-  delay: 300 # shift按下延时多久开启
+  delay: 100 # 所有键位延时触发而不是立即触发（包括shift，以解决和浏览器键位冲突问题）
+  shiftDelay: 200 # shift按下延时多久开启
 
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
