支持无障碍优化配置

--- a/plugins.yml
+++ b/plugins.yml
@@ -209,3 +209,7 @@ ali_iconfont_css:
   name: anzhiyu-theme-static
   file: icon/ali_iconfont_css.css
   version: 1.1.4
+accesskey_js:
+  name: anzhiyu-theme-static
+  file: accesskey/accesskey.js
+  version: 1.1.5
