--- a/_config.yml
+++ b/_config.yml
@@ -1081,6 +1081,10 @@ shortcutKey:
   delay: 100 # 所有键位延时触发而不是立即触发（包括shift，以解决和浏览器键位冲突问题）
   shiftDelay: 200 # shift按下延时多久开启
 
+# 无障碍优化（在首页按下「shift + ?」以查看效果）
+accesskey:
+  enable: true
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
@@ -1170,3 +1174,4 @@ CDN:
     # rightmenu:
     # waterfall:
     # ali_iconfont_css:
+    # accesskey_js:
